extensions/amp-carousel/0.1/amp-carousel.css
/**
 * Copyright 2015 The AMP HTML Authors. All Rights Reserved.
 *
 * Licensed under the Apache License, Version 2.0 (the "License");
 * you may not use this file except in compliance with the License.
 * You may obtain a copy of the License at
 *
 *      http://www.apache.org/licenses/LICENSE-2.0
 *
 * Unless required by applicable law or agreed to in writing, software'
 * distributed under the License is distributed on an "AS-IS" BASIS,
 * WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
 * See the License for the specific language governing permissions and
 * limitations under the License.
 */

amp-carousel {
}

/**
 * `amp-carousel-slide` class is added to every item in the carousel to
 * allow page authors to target items for user-defined styling.
 * Every `<amp-carousel>'s` immediate child is considered a slide in
 * the carousel.
 */
.amp-carousel-slide > .i-amphtml-replaced-content {
  /*
   * Apply contain object-fit to all replaced content to avoid distorted ratios.
   */
  object-fit: contain;
}

.amp-carousel-button {
  position: absolute;
  box-sizing: border-box;
  top: 50%;
  height: 34px;
  width: 34px;
  border-radius: 2px;
  opacity: 0;
  pointer-events: all;
  background-color: rgba(0, 0, 0, .5);
  background-position: 50% 50%;
  background-repeat: no-repeat;
  transform: translateY(-50%);
  visibility: hidden;
  z-index: 10;
}

amp-carousel[controls] .amp-carousel-button,
.amp-mode-mouse .amp-carousel-button {
  opacity: 1;
  visibility: visible;
}

.amp-carousel-button-prev {
  left: 16px;
  background-image: url('data:image/svg+xml;charset=utf-8,<svg xmlns="http://www.w3.org/2000/svg" width="18" height="18" fill="%23fff" viewBox="0 0 18 18"><path d="M15 8.25H5.87l4.19-4.19L9 3 3 9l6 6 1.06-1.06-4.19-4.19H15v-1.5z" /></svg>');
  background-size: 18px 18px;
}

.amp-carousel-button-next {
  right: 16px;
  background-image: url('data:image/svg+xml;charset=utf-8,<svg xmlns="http://www.w3.org/2000/svg" width="18" height="18" fill="%23fff" viewBox="0 0 18 18"><path d="M9 3L7.94 4.06l4.19 4.19H3v1.5h9.13l-4.19 4.19L9 15l6-6z" /></svg>');
  background-size: 18px 18px;
}

:not(.amp-mode-mouse) .-amp-carousel-button-start-hint .amp-carousel-button:not(.amp-disabled) {
  animation: -amp-carousel-hint 1s ease-in 3s 1 normal both;
}

@keyframes -amp-carousel-hint {
  0% {
    opacity: 1;
    visibility: visible;
  }
  100% {
    opacity: 0;
    visibility: hidden;
  }
}

amp-carousel .amp-carousel-button.amp-disabled {
  animation: none;
  opacity: 0;
  visibility: hidden;
}

/* Begin SlideScroll */
.-amp-slidescroll {
}

.-amp-slides-container {
  display: flex !important;
  flex-wrap: nowrap;
  height: 100% !important;
  left: 0;
  overflow-x: auto !important;
  overflow-y: hidden !important;
  position: absolute !important;
  top: 0;
  width: 100% !important;
  scroll-snap-type: mandatory !important;
  /**
   * Hide the scrollbar by tucking it under some padding
   * which gets cut off as it overflows the parent.
   * The exact size of the padding does not matter as long as it is
   * larger than the height of the scrollbar. 20px is large enough to cover
   * both desktop and mobile scrolbar sizes in different browsers.
   * This relies on content box-sizing, although that's the default
   * we still ensure it does not get overwritten.
   */
  padding-bottom: 20px !important;
  box-sizing: content-box !important;
  -webkit-overflow-scrolling: touch !important;
}

/** Only hide scroll bar for touch devices as it causes jitters on desktops */
.-amp-slides-container.-amp-no-scroll {
  overflow-x: hidden !important;
}

.-amp-slide-item {
  align-items: center !important;
  display: none !important;
  flex: 0 0 100% !important;
  height: 100% !important;
  justify-content: center !important;
  position: relative !important;
  scroll-snap-coordinate: 0 0 !important;
  width: 100% !important;
}

.-amp-slide-item > * {
  height: 100%;
  width: 100%;
  overflow: hidden !important;
}

.-amp-slide-item-show {
  display: flex !important;
}

.-amp-carousel-start-marker,
.-amp-carousel-end-marker {
  background-color: transparent !important;
  display: block !important;
  flex: 0 0 1px !important;
  height: 100% !important;
  position: relative !important;
  scroll-snap-coordinate: 0 0 !important;
  width: 1px !important;
}

.-amp-carousel-start-marker {
  order: -1 !important;
  margin-left: -1px !important;
}

.-amp-carousel-end-marker {
  order: 100000000 !important;
  margin-right: -1px !important;
}
/* End SlideScroll */

/* Begin ScrollableCarousel */
.-amp-scrollable-carousel-container .amp-carousel-slide {
  display: inline-block !important;
  margin-left: 8px;
}

/*TODO(dvoytenko): this has to be customizable*/
.-amp-scrollable-carousel-container .amp-carousel-slide:first-child {
  margin-left: 0px;
}

.-amp-scrollable-carousel-container {
  white-space: nowrap !important;
  overflow-x: auto !important;
  overflow-y: hidden !important;
  -webkit-overflow-scrolling: touch !important;
}

.-amp-slidescroll-no-snap.-amp-slides-container {
  scroll-snap-type: none !important;
}

.-amp-slidescroll-no-snap.-amp-slide-item {
  scroll-snap-coordinate: none !important;
}
/* End ScrollableCarousel */

